--- a/app/client/packages/design-system/widgets/src/components/TestComponent/TertiaryButonTest.stories.mdx
+++ b/app/client/packages/design-system/widgets/src/components/TestComponent/TertiaryButonTest.stories.mdx
@@ -7,10 +7,10 @@ import { Button } from "../Button";
   component={TestComponent}
 />
 
-export const Template = (args) => (
+export const Template = (args, { globals: { colorScheme } }) => (
   <>
     <h3>{args.title}</h3>
-    <TestComponent>
+    <TestComponent colorScheme={colorScheme}>
       <Button {...args}>Test</Button>
     </TestComponent>
   </>
