fix: fix test component background

--- a/app/client/packages/design-system/widgets/src/components/TestComponent/SecondaryButonTest.stories.mdx
+++ b/app/client/packages/design-system/widgets/src/components/TestComponent/SecondaryButonTest.stories.mdx
@@ -11,9 +11,16 @@ export const Template = (args, { globals: { colorScheme } }) => {
   return (
     <>
       <h3>{args.title}</h3>
-      <TestComponent colorScheme={colorScheme}>
-        <Button {...args}>Test</Button>
-      </TestComponent>
+      <div
+        style={{
+          padding: "50px",
+          background: "#fff",
+        }}
+      >
+        <TestComponent colorScheme={colorScheme}>
+          <Button {...args}>Test</Button>
+        </TestComponent>
+      </div>
     </>
   );
 };
