feat: imporove color algo and add focus test story

--- a/app/client/packages/design-system/widgets/src/components/TestComponent/PrimaryButonTest.stories.mdx
+++ b/app/client/packages/design-system/widgets/src/components/TestComponent/PrimaryButonTest.stories.mdx
@@ -54,6 +54,16 @@ export const Template = (args, { globals: { colorScheme } }) => (
     {Template.bind({})}
   </Story>
   <Story
+    name="primary focus"
+    args={{
+      title: "Primary active",
+      variant: "primary",
+      isFocused: true,
+    }}
+  >
+    {Template.bind({})}
+  </Story>
+  <Story
     name="primary disabled"
     args={{
       title: "Primary disabled",
