--- a/app/client/packages/design-system/widgets/src/components/TestComponent/SecondaryButonTest.stories.mdx
+++ b/app/client/packages/design-system/widgets/src/components/TestComponent/SecondaryButonTest.stories.mdx
@@ -56,6 +56,16 @@ export const Template = (args, { globals: { colorScheme } }) => {
     {Template.bind({})}
   </Story>
   <Story
+    name="secondary focus"
+    args={{
+      title: "Secondary active",
+      variant: "secondary",
+      isFocused: true,
+    }}
+  >
+    {Template.bind({})}
+  </Story>
+  <Story
     name="secondary disabled"
     args={{
       title: "Secondary disabled",
