--- a/app/client/packages/design-system/widgets/src/components/Checkbox/Checkbox.stories.mdx
+++ b/app/client/packages/design-system/widgets/src/components/Checkbox/Checkbox.stories.mdx
@@ -7,6 +7,8 @@ import { Checkbox } from "./";
   component={Checkbox}
   args={{
     label: "Check me",
+    error: "",
+    description: "",
   }}
 />
 
