refactor class to data attr

--- a/app/client/packages/design-system/widgets/src/components/Button/Button.stories.mdx
+++ b/app/client/packages/design-system/widgets/src/components/Button/Button.stories.mdx
@@ -82,3 +82,23 @@ There are 3 variants of the button component.
     {Template.bind({})}
   </Story>
 </Canvas>
+
+# With Icon
+
+# States
+
+<Canvas>
+  <Story
+    name="with Icon"
+    args={{
+      children: "Disabled",
+      icon: (
+        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16 16">
+          <path d="M7.127 22.562 0 24l1.438-7.128 5.689 5.69zm1.414-1.414L19.769 9.923l-5.69-5.692L2.852 15.458l5.689 5.69zM18.309 0l-2.816 2.817 5.691 5.691L24 5.689 18.309 0z" />
+        </svg>
+      ),
+    }}
+  >
+    {Template.bind({})}
+  </Story>
+</Canvas>
