--- a/app/client/packages/design-system/headless/src/components/Tooltip/Tooltip.stories.mdx
+++ b/app/client/packages/design-system/headless/src/components/Tooltip/Tooltip.stories.mdx
@@ -1,13 +1,12 @@
 import { Canvas, Meta, Story, ArgsTable } from "@storybook/addon-docs";
 
 import { Tooltip, TooltipTrigger, TooltipContent } from "./";
+import { Button } from "../Button";
 
 <Meta
   title="Design-system/headless/Tooltip"
   component={Tooltip}
   args={{
-    placement: "bottom",
-    open: undefined,
     onOpenChange: undefined,
   }}
 />
@@ -15,7 +14,9 @@ import { Tooltip, TooltipTrigger, TooltipContent } from "./";
 export const Template = (args) => {
   return (
     <Tooltip {...args}>
-      <TooltipTrigger>My trigger</TooltipTrigger>
+      <TooltipTrigger>
+        <button>My trigger</button>
+      </TooltipTrigger>
       <TooltipContent>My tooltip</TooltipContent>
     </Tooltip>
   );
@@ -36,19 +37,27 @@ The placement of the tooltip can be changed by passing the `placement` prop.
 <Canvas>
   <Story name="Tooltip placement">
     <Tooltip placement="left">
-      <TooltipTrigger>Left</TooltipTrigger>
+      <TooltipTrigger>
+        <button>Left</button>
+      </TooltipTrigger>
       <TooltipContent>My tooltip</TooltipContent>
     </Tooltip>
     <Tooltip placement="top">
-      <TooltipTrigger>Top</TooltipTrigger>
+      <TooltipTrigger>
+        <button>Top</button>
+      </TooltipTrigger>
       <TooltipContent>My tooltip</TooltipContent>
     </Tooltip>
     <Tooltip placement="bottom">
-      <TooltipTrigger>Bottom</TooltipTrigger>
+      <TooltipTrigger>
+        <button>Bottom</button>
+      </TooltipTrigger>
       <TooltipContent>My tooltip</TooltipContent>
     </Tooltip>
     <Tooltip placement="right">
-      <TooltipTrigger>Right</TooltipTrigger>
+      <TooltipTrigger>
+        <button>Right</button>
+      </TooltipTrigger>
       <TooltipContent>My tooltip</TooltipContent>
     </Tooltip>
   </Story>
@@ -60,9 +69,13 @@ If the trigger is disabled, the tooltip will not be displayed.
 
 <Canvas>
   <Story name="Tooltip disabled">
-    <Tooltip disabled>
-      <TooltipTrigger disabled>My trigger</TooltipTrigger>
+    <Tooltip>
+      <TooltipTrigger>
+        <Button>Disabled</Button>
+      </TooltipTrigger>
       <TooltipContent disabled>My tooltip</TooltipContent>
     </Tooltip>
   </Story>
 </Canvas>
+
+<ArgsTable story="Tooltip" of={Tooltip} />
