--- a/app/client/packages/design-system/widgets/src/components/Tooltip/Tooltip.stories.mdx
+++ b/app/client/packages/design-system/widgets/src/components/Tooltip/Tooltip.stories.mdx
@@ -16,7 +16,9 @@ import { Tooltip, TooltipTrigger, TooltipContent, withTooltip } from "./";
 export const Template = (args) => {
   return (
     <Tooltip {...args}>
-      <TooltipTrigger>My trigger</TooltipTrigger>
+      <TooltipTrigger>
+        <Button>My trigger</Button>
+      </TooltipTrigger>
       <TooltipContent>My tooltip</TooltipContent>
     </Tooltip>
   );
@@ -38,19 +40,27 @@ The placement of the tooltip can be changed by passing the `placement` prop.
   <Story name="Tooltip placement">
     <ButtonGroup>
       <Tooltip placement="left">
-        <TooltipTrigger>Left</TooltipTrigger>
+        <TooltipTrigger>
+          <Button variant="secondary">Left</Button>
+        </TooltipTrigger>
         <TooltipContent>My tooltip</TooltipContent>
       </Tooltip>
       <Tooltip placement="top">
-        <TooltipTrigger>Top</TooltipTrigger>
+        <TooltipTrigger>
+          <Button variant="secondary">Top</Button>
+        </TooltipTrigger>
         <TooltipContent>My tooltip</TooltipContent>
       </Tooltip>
       <Tooltip placement="bottom">
-        <TooltipTrigger>Bottom</TooltipTrigger>
+        <TooltipTrigger>
+          <Button variant="secondary">Bottom</Button>
+        </TooltipTrigger>
         <TooltipContent>My tooltip</TooltipContent>
       </Tooltip>
       <Tooltip placement="right">
-        <TooltipTrigger>Right</TooltipTrigger>
+        <TooltipTrigger>
+          <Button variant="secondary">Right</Button>
+        </TooltipTrigger>
         <TooltipContent>My tooltip</TooltipContent>
       </Tooltip>
     </ButtonGroup>
@@ -64,7 +74,9 @@ If the trigger is disabled, the tooltip will not be displayed.
 <Canvas>
   <Story name="Tooltip disabled">
     <Tooltip>
-      <TooltipTrigger isDisabled>My trigger</TooltipTrigger>
+      <TooltipTrigger>
+        <Button isDisabled>My trigger</Button>
+      </TooltipTrigger>
       <TooltipContent>My tooltip</TooltipContent>
     </Tooltip>
   </Story>
